main.css
@font-face {
    font-family: "IBMPlexSans";
    src: url("fonts/IBMPlexSans-Regular.ttf");
    font-weight: 100;
  }
  
  @font-face {
    font-family: "IBMPlexSans";
    src: url("fonts/IBMPlexSans-SemiBold.ttf");
    font-weight: 200;
  }
  
  @font-face {
    font-family: "IBMPlexSans";
    src: url("fonts/IBMPlexSans-Bold.ttf");
    font-weight: 300;
  }

body {
    font-family: "IBMPlexSans", sans-serif;
    background-color: #020813;
    color: #BFD0E1;
}
  
a {
    text-decoration: none;
}

.navbar-tags {
    font-weight: 200;
	text-decoration: none;
	color: #52ABFF;
    font-size: 14pt;
    letter-spacing: 1px;
}

h1 {
    font-weight: 100;
    color: #52ABFF;
    font-size: 30px;
    display: inline;
}

h2 {
    font-weight: 300;
    color: #BFD0E1;
    font-size: 40px;
    margin-top: 0px;
}

h3 {
    font-weight: 200;
    color: #BFD0E1;
    font-size: 25px;
    margin-top: 0px;
    display: inline;
}

h4 {
    display: inline;
    color: #BFD0E1;
    font-weight: 100;
    font-size: 22px;
}

h5 {
    color: #BFD0E1;
    font-weight: 200;
    margin-top: 5px;
    font-size: 30px;
    margin-bottom: 25px;
}

ol li {
    margin-bottom: 15px;
}

ul li {
    font-weight: 100;
    font-size: 22px;
    margin: 10px 0;
}

.container {
    top: -2px;
    left: 0;
    right: 0;
    position: absolute;

}

.navbar {
    position: fixed;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 100%;
    height: 100px;
    background-color: #020813;
    z-index: 1;
    margin-top: 0;
  }

.left-nav-links {
    margin: 40px;
    font-size: 22px;
    display: flex;
}

.right-nav-links {
    margin: 40px;
    font-size: 22px;
    display: flex;
    flex-direction: row;
    gap: 46px;

}

.hidden-mobile {
    display: none;
}

@media (min-width: 769px) {
    .hidden-mobile {
      display: inline;
    }
  }

.content {
    max-width: 80%;
    margin: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }

.header {
    align-items: center;
    font-size: 30px;
    margin-top: 300px;
    font-weight: 100;
    margin-bottom: 22%;
}

.experience {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    width: 100%;
    box-sizing: border-box;
}

.projects {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    width: 100%;
    box-sizing: border-box;
}

.title {
    font-size: 22px;
    padding-top: 100px;
}

.card {
    width: 100%;
    height: 100%;
    margin: 36px 0 36px 0;
    padding: max(3%, 30px) 6% max(3%, 30px) max(3%, 30px);
    background: #020813;
    box-shadow: 0px 0px 10px 3px rgba(82, 171, 255, 0.4);  
    display: flex;
    flex-direction: row;
    box-sizing: border-box;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 6%;
}

.card:hover {
    box-shadow: 0px 0px 20px 15px rgba(82, 171, 255, 0.4); 
}

.left-pic-container {
    flex: 0 0 30%;
    display: flex;
    justify-content: center;
    height: 100%;
    width: 100%;
    min-width: 250px;
    max-height: 250px;
    margin-right: 15px;
}

.left-pic {
    object-fit: contain;
    border-radius: 5px;
    max-width: 100%;
    max-height: 100%;
}

.right-text {
    height: 100%;
    width: 55%;
    display: flex;
    flex-direction: column;
    flex-grow: 1;
}

.tags-row {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.tags {
    box-sizing: border-box;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    padding: 1%;
    gap: 8.82px;
    color: #BFD0E1;
    
    width: 12%;
    min-width: 90px;
    height: 100%;
    max-height: 37.64px;
    left: 772px;
    top: 1003px;

    border: 2px solid #52ABFF;
    border-radius: 88.1818px;
    margin-right: 15px;
    margin-bottom: 5px;
    margin-top: 10px;
}

.project-name {
    font-size: 32px;
    font-weight: 300;
    margin-top: 10px;
    color: #BFD0E1;
}

.description {
    word-wrap: normal;
    font-size: 22px;
    font-weight: 100;
    margin-top: 16px;
    color: #BFD0E1;
}

.divider {
    width: 100%;
    height: 3px;
    margin-top: 106px;
    background-color: #162F4B;
}

.about {
    display: flex;
    flex-direction: row;
    width: 100%;
    height: 500px;
    margin-top: 77px;
    margin-bottom: 100px;
    padding: 28px;
    flex-wrap: wrap;
}

.about-text {
    display: flex;
    flex-direction: column;
    width: max(38%, 600px);
    padding: 28px;
}
.about-title {
    font-size: 22px;
    margin-top: 15px;
}
.about-description {
    font-size: 22px;
    word-wrap: normal;
    font-weight: 100;
    margin-top: 16px;
}

.logos {
    /*border: solid blue 1px;*/
    height: 6%;
    margin-top: 16px;
}

.LinkedInImage {
    margin-right: 20px;
}

.self-pic {
    width: 80%;
    max-width: 600px;
    margin: 0 auto;
    overflow: hidden;
    border: 1px solid black;
    display: inline-block;
}

.selfPicture {
    width: 100%;
    height: auto;
    display: block;
    margin-bottom: 20px;
}

.incard-pic-and-summary {
    display: flex;
    flex-direction: row;
    width: 100%;
    height: 400px;
    margin-top: 150px;
    margin-bottom: 50px;
    padding: 28px;
}

.incard-pic {
    flex: 0 0 40%;
    height: 100%;
    width: 100%;
    overflow: hidden;
    margin-left: 0px;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 20px;
}

.incard-picture {
    object-fit: cover;
    max-width: 100%;
    max-height: 100%;
    justify-content: center;
    border-radius: 12px;
    box-shadow: 0px 0px 15px 5px rgba(82, 171, 255, 0.3);
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}

.incard-summary {
    height: 100%;
    margin-left: 5%;
    width: 100%;
}

.incard-project-description {
    width: 80%;
}

.incard-divider {
    width: 100%;
    height: 3px;
    margin-top: 0px;
    background-color: #162F4B;
}

.incard-reflection {
    width: 100%;
    height: 500px;
    margin-bottom: 50px;
    padding: 28px;
}

.incard-olist {
    display: block;
    color: #BFD0E1;
    font-weight: 100;
    font-size: 22px;
}

.sentiment-analysis-graph-container {
    display: flex;
    flex-direction: column;
    width: 100%;
    justify-content: space-between;
}

.sentiment-analysis-graph {
    padding: 30px;
}

